# APH

./: Cargo.toml  README.md  build.py
.github/workflows/: flutter-build - only Windows.yml  flutter-build Windows.yml  flutter-build.yml  flutter-nightly.yml
flutter/android/app/src/main/: AndroidManifest.xml
flutter/lib/: common.dart
flutter/lib/desktop/pages/: connection_page.dart  desktop_home_page.dart  desktop_setting_page.dart  install_page.dart
flutter/lib/mobile/pages/: settings_page.dart
libs/hbb_common/src/: config.rs
libs/portable/: Cargo.toml
libs/portable/src/: main.rs
res/: manifest.xml
src/: core_main.rs  flutter_ffi.rs
src/lang/: cn.rs  en.rs
src/ui/: index.tis  install.tis
